Minor contrast issue

--- a/src/css/mc-styles.css
+++ b/src/css/mc-styles.css
@@ -1657,7 +1657,7 @@ fieldset.mc-flex {
 }
 
 .mc-support-me p, .mc-support-me a {
-	color: #f6f7f7;
+	color: #fff;
 }
 
 @media ( max-width: 1200px ) {
